[package]
name = "enta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
tun = { git = "https://github.com/meh/rust-tun.git", rev = "d97c19a1578f99937f6e6e4c5ed7dcd47f42b885", features = ["async"] }
futures = "0.3"
log = "0.4.17"
env_logger = "0.9.0"
bytes = "1.2.0"
