[package]
name = "entg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec", "io-util"] }
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
futures = "0.3"
log = "0.4.17"
env_logger = "0.9.0"
bytes = "1.2.0"
num_enum = "0.5.7"
lazy_static = "1.4.0"
rats-tls = { path = "../rats-tls" }

