[package]
name = "gw-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
tun = { version = "0.5.3", features = ["async"] }
futures = "0.3"
rats-tls-sys = { path = "../rats-tls-sys" }
